--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,13 @@
-PAYERPRIVATEKEY = ""
-
-RPC_ENDPOINT = 
-RPC_WEBSOCKET_ENDPOINT = 
-
-JITO_KEY=
-
-BLOCKENGINE_URL=tokyo.mainnet.block-engine.jito.wtf
-
-CHECK_FILTER=true
-CHECK_SOCIAL=true
-CHECK_NAMEWHITELIST=false
-CHECK_NAMEBLACKLIST=false
-CHECK_WALLETWHITELIST=false
-CHECK_WALLETBLACKLIST=false
-CHECK_SOLDBALANCE=true
-
-USE_SNIPE_LIST=false
-
-JITO_MODE = true
-JITO_ALL = false
-JITO_FEE=0.001
-COMMITMENT_LEVEL=confirmed
-
-stop_loss=-0.1
-
-
+RPC_HTTPS=
+RPC_WSS=
+DEVNET_RPC_HTTPS=
+RAYDIUM_LPV4=
+LOG_INSTRUCTION=
+PRIVATE_KEY=
+SLIPPAGE=10
+JITO_BLOCK_ENGINE_URL=
+JITO_TIP_STREAM_URL=
+JITO_TIP_PERCENTILE=
+JITO_TIP_VALUE=0.004
+UNIT_PRICE=
+UNIT_LIMIT=
